--- a/app/views/purchases/list_items.html.erb
+++ b/app/views/purchases/list_items.html.erb
@@ -9,10 +9,10 @@
           Producto
         </th>
         <th class="small bordered_bottom bordered_right">
-          Precio
+          Afecto
         </th>
         <th class="small bordered_bottom bordered_right">
-          Precio S/IGV
+          Inafecto
         </th>        
         <th class="small bordered_bottom bordered_right">
           Cantidad
