--- a/app/views/bank_acounts/_form.html.erb
+++ b/app/views/bank_acounts/_form.html.erb
@@ -5,7 +5,7 @@
 
 
     <div class="field">
-	    <%= f.label :number,"Banco " %><br>
+	    <%= f.label :number,"Cuenta Bancaria " %><br>
 	    <%= f.text_field :number %>
 	</div>
 
