--- a/app/views/companies/cpagar.html.erb
+++ b/app/views/companies/cpagar.html.erb
@@ -16,20 +16,9 @@
   <p>
      Cancelar documentos 
   </p>
-  <%= hr() %>
-  
-  <h3>
-    <%= image_tag("product_kit_32.png", :class => "vmiddle") %>
-    <%= link_to "Letras por pagar ", "/companies/products_kits/#{@company.id}" %>
-  </h3>
 
 
 
-  <p>
-   Letras por pagar 
-  </p>
-
-  <%= hr() %>
 
 </div>
 
@@ -37,7 +26,7 @@
   <h3>
         <div>
     <%= image_tag("clients_32.png", :class => "vmiddle") %>
-    <%= link_to "Bancos", "/companies/banks/#{@company.id}" %>
+    <%= link_to "Bancos", banks_path %>
         </div>
   </h3>
   <p>
@@ -48,7 +37,7 @@
 
   <h3>
     <%= image_tag("supplier_32.png", :class => "vmiddle") %>
-    <%= link_to "Cuentas bancarias ", "/companies/bank_acounts/#{@company.id}" %>
+    <%= link_to "Cuentas bancarias ", bank_acounts_path %>
   </h3>
   <p>
      Agregar, editar or eliminar cuentas por pagar 
