--- a/app/views/ordens/_form.html.erb
+++ b/app/views/ordens/_form.html.erb
@@ -57,7 +57,7 @@
     </div>
     <div class="field">
       <%= f.label :fecha, "Fecha Emision*", :class => "bold" %><br />
-      <%= f.date_field :fecha, value: Time.now.strftime("%d/%m/%Y") %>
+      <%= f.date_field :fecha %>
     </div>
 
     
@@ -377,6 +377,103 @@
     $("#ac_item_tarifa").bind("keyup", function() {
       updateItemOrden();
     });
+    
+    $("#ac_item_1").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_2").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_3").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_4").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_5").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_6").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_7").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_8").bind("keyup", function() {
+      updateItemOrden();
+    });
+    
+    $("#ac_item_9").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_10").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_11").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_12").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_13").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_14").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_15").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_16").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_17").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_18").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_19").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_20").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_21").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_22").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_23").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_24").bind("keyup", function() {
+      updateItemOrden();
+    });
+    
+    $("#ac_item_25").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_26").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_27").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_28").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_29").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_30").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#ac_item_31").bind("keyup", function() {
+      updateItemOrden();
+    });
+    
     
     <% if @products_lines %>
       
