--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -8,7 +8,7 @@
 
 <%= form_tag('/login') do %>
   <p>
-    <strong>Usernamezzz s:</strong>
+    <strong>Username :</strong>
     <br />
     <input type="text" name="user[username]" value="" />
   </p>
