--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -55,12 +55,12 @@
       <%= f.select :division_id,options_from_collection_for_select(@divisions,'id','name') %>
     </div>
     
-
+    
   
     <%= hr() %>
     
     <div class="field" id="list_items">
-      <p class="bold big">Products:</p>
+      <p class="bold big"> Programas :</p>
     </div>
     
     <%= hr() %>
