--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -47,7 +47,7 @@
       <td>   
         <div >
         <input type="hidden" name="ac_item_id" id="ac_item_id" value="<% if @ac_item_id %><%= @ac_item_id %><% end %>"/>
-        <input type="text" name="ac_item" id="ac_item" value="<% if @ac_item %><%= @ac_item %><% end %>" readonly  />
+        <input type="text" name="ac_item" id="ac_item" value="<% if @ac_item %><%= @ac_item %><% end %>"  />
         </div>
       </td>
       
