--- a/app/views/ordens/ordens_products/new.html.erb
+++ b/app/views/ordens/ordens_products/new.html.erb
@@ -1,5 +1,5 @@
 
-<h2> Nueva Cuota  </h2>
+<h2> Nuevo item </h2>
   
  <p>Tiempo duracion 
  <input type="text" name="ac_item_duracion" id="ac_item_duracion" value= "<%= @orden.tiempo %>" readonly class="tf_short" />
