--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -292,22 +292,18 @@
       updateItemOrden();
     });
     
-    $("#ac_item_quantity").bind("keyup", function() {
+
+    $("#orden_product_tarifa").bind("keyup", function() {
       updateItemOrden();
     });
     
-    
-    $("#ac_item_tarifa").bind("keyup", function() {
+    $("#orden_product_d01").bind("keyup", function() {
       updateItemOrden();
     });
-    
-    $("#ac_item_1").bind("keyup", function() {
+    $("#orden_product_d02").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_2").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_3").bind("keyup", function() {
+    $("#orden_product_d03").bind("keyup", function() {
       updateItemOrden();
     });
     $("#ac_item_4").bind("keyup", function() {
