--- a/app/views/ordens/ordens_products/_form.html.erb
+++ b/app/views/ordens/ordens_products/_form.html.erb
@@ -288,7 +288,6 @@
     
     $("#ac_item").result(function(event, data, formatted) {
       $("#ac_item_id").val(data[2]);      
-      
       updateItemOrden();
     });
     
@@ -306,90 +305,90 @@
     $("#orden_product_d03").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_4").bind("keyup", function() {
+    $("#orden_product_d04").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_5").bind("keyup", function() {
+    $("#orden_product_d05").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_6").bind("keyup", function() {
+    $("#orden_product_d06").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_7").bind("keyup", function() {
+    $("#orden_product_d07").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_8").bind("keyup", function() {
-      updateItemOrden();
-    });
-    
-    $("#ac_item_9").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_10").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_11").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_12").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_13").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_14").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_15").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_16").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_17").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_18").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_19").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_20").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_21").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_22").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_23").bind("keyup", function() {
-      updateItemOrden();
-    });
-    $("#ac_item_24").bind("keyup", function() {
+    $("#orden_product_d08").bind("keyup", function() {
       updateItemOrden();
     });
     
-    $("#ac_item_25").bind("keyup", function() {
+    $("#orden_product_d09").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_26").bind("keyup", function() {
+    $("#orden_product_d10").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_27").bind("keyup", function() {
+    $("#orden_product_d11").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_28").bind("keyup", function() {
+    $("#orden_product_d12").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_29").bind("keyup", function() {
+    $("#orden_product_d13").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_30").bind("keyup", function() {
+    $("#orden_product_d14").bind("keyup", function() {
       updateItemOrden();
     });
-    $("#ac_item_31").bind("keyup", function() {
+    $("#orden_product_d15").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d16").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d17").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d18").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d19").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d20").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d21").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d22").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d23").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d24").bind("keyup", function() {
+      updateItemOrden();
+    });
+    
+    $("#orden_product_d25").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d26").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d27").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d28").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d29").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d30").bind("keyup", function() {
+      updateItemOrden();
+    });
+    $("#orden_product_d31").bind("keyup", function() {
       updateItemOrden();
     });
 
