--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -15,8 +15,10 @@
 
 	<div class="col-md-12">
 		<div class="addresses">
-			<h3> Direcciones adicionales   </h3>
+			<h3> Direcciones adicionales   </hAd3>
+			<% if @customer.addresses %>
 			<%= render @customer.addresses %>
+			<% end %>
 			<div>
 			<%= link_to "Agregar direcciones  ", new_customer_address_path(@customer),class: "button" %>	
 			<%= form_tag import2_customers_path, multipart: true do %>
