--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -20,27 +20,27 @@
 
     <div class="field">
       <%= f.label :importe, "Importe*", :class => "bold" %><br />
-      <%= f.text_field :importe %>      
+      <%= f.number_field :importe,:step => 0.01 %>      
     </div>
 
     <div class="field">
       <%= f.label :vventa, "V.Venta*", :class => "bold" %><br />
-      <%= f.text_field :vventa %>      
+      <%= f.text_field :vventa , :readonly => true %>      
     </div>
 
     <div class="field">
       <%= f.label :comision1, "Comision 1*", :class => "bold" %><br />
-      <%= f.text_field :comision1 %>      
+      <%= f.text_field :comision1  , :readonly => true%>      
     </div>
 
     <div class="field">
       <%= f.label :comision2, "Comision 2*", :class => "bold" %><br />
-      <%= f.text_field :comision2 %>      
+      <%= f.text_field :comision2 , :readonly => true %>      
     </div>
 
     <div class="field">
       <%= f.label :total, "Total *", :class => "bold" %><br />
-      <%= f.text_field :total %>      
+      <%= f.text_field :total , :readonly => true %>      
     </div>
 
     <div class="field">
@@ -63,4 +63,17 @@
   </div>
 
 <% end %>
+  <script type="text/javascript">
+  $(document).ready(function() {
+    
+      
+    $("#quote_importe").bind("keyup", function() {
+      updateItemContrato();
+    });
+    
   
+ 
+  });
+  
+
+</script>
